--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,12 @@ ul {
 }
 
 .basket{
+    height: 10px;
+    width:  auto;
 }
 
 .basket-image {
-    height: 1px;
+    height: 10px;
     width:  auto;
 }
 
